--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
+    "js-cookie": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "serve": "^12.0.0",
+    "use-async-effect": "^2.2.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "start-localhost": "env-cmd -f localhost.env react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
